--- a/views/all-missions.html
+++ b/views/all-missions.html
@@ -8,5 +8,12 @@
     <link rel="stylesheet" href="../public/css/all-missions.css">
 </head>
 <body>
+    <div id="all-missions-wrapper">
+        <!-- <div class="mission-container">
+            <img class="mission-image" src="../public/images/report.jpg" alt="Report Image">
+            <p class="mission-name">missionName</p>
+        </div> -->
+    </div>
+    <script src="../public/javascript/all-missions.js" ></script>
 </body>
 </html>
