--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,8 @@ body{
     width: 100%;
     background: #bec2c7;
     border-bottom: 1px solid #b7bdc5;
-    position: relative;
+    position: fixed;
+    z-index: 2;
 }
 
 #main-header input[type="search"]{
@@ -42,28 +43,28 @@ body{
     height: 100%;
     background: #d0d5da;
     color: #fff;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
+    padding-top: 3rem;
 }
 
 #left-side-container p {
     color: rgb(85, 84, 84);
     margin-bottom: 0.6em;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     padding-left: 8px;
 }
 
 #left-side-container a {
-    color: rgb(73, 72, 72);
+    /* color: rgb(73, 72, 72); */
+    color: rgb(68, 68, 68);
     text-decoration: none;
     display: block;
     width: 100%;
-    padding-left: 20px;
-    margin-bottom: 0.8rem;
+    padding: 6px 0px 6px 20px;
 }
-#left-side-container a:visited {
+#left-side-container a:active, #left-side-container a:visited {
     background: #b8bdc2;
 }
-
 
 /*This is for material design icon*/
 i{ 
@@ -74,4 +75,11 @@ i{
     height: 100%;
     /* background: rgb(94, 93, 93); */
     margin-left: 9rem;
+    width: calc(100% - 9rem);
+}
+
+#right-side-container__results {
+    width: 90%;
+    height: 90%;
+    margin: 7% 5% 0% 5%;
 }
