--- a/views/index.html
+++ b/views/index.html
@@ -17,17 +17,22 @@
     <main id="grid"></div>
         <div id="left-side-container">
             <p>Favorites</p>
-            <a href="#" class="recents link"><i class="recents material-icons">archive</i> Recents</a>
-            <a href="#" class="by-date link"><i class="material-icons">filter_list</i> By Date</a>
-            <a href="#" class="delete link"><i class="material-icons">delete</i> Delete</a>
-            <a href="#" class="all-reports link"><i class="material-icons">library_books</i> All Reports</a>
-            <a href="#" class="all-videos link"><i class="material-icons">ondemand_video</i> All Videos</a>
+            <a href="#visited" class="recents link"><i class="recents material-icons">archive</i> Recents</a>
+            <a href="#" class="by-date link"><i class="by-date material-icons">filter_list</i> By Date</a>
+            <a href="#" class="delete link"><i class="delete material-icons">delete</i> Delete</a>
+            <a href="#" class="all-reports link"><i class="all-reports material-icons">library_books</i> All Reports</a>
+            <a href="#" class="all-videos link"><i class="all-videos material-icons">ondemand_video</i> All Videos</a>
 
         </div>
         <div id="right-side-container">
+            <div id="right-side-container__results">
+
+            </div>
         </div>
     </main>
-    <script src="../public/javascript/main.js">
+    <script src="../public/javascript/main.js"></script>
+    <script src="../public/javascript/all-missions.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2SDdNadL7mUwEntaFeHDlZtMwplZEB4U&callback=initMap">
     </script>
 </body>
 </html>
